metadata/force-app/main/default/objects/TestObj__c/TestObj__c.object-meta.xml
<CustomObject>
    <label>TestObj</label>
    <nameField>
        <label>TestObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>