metadata/force-app/main/default/objects/TestObj__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TestObjs (Account)</relationshipLabel>
    <relationshipName>TestObjs1</relationshipName>
    <type>Lookup</type>
</CustomField>