metadata/force-app/main/default/objects/TestObj__c/fields/testfield1__c.field-meta.xml
<CustomField>
    <fullName>testfield1__c</fullName>
    <description>testfield1</description>
    <label>testfield1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>