metadata/force-app/main/default/objects/TestObj__c/fields/testfield3__c.field-meta.xml
<CustomField>
    <fullName>testfield3__c</fullName>
    <label>testfield3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>