metadata/force-app/main/default/objects/TestObj__c/fields/testfieldformula__c.field-meta.xml
<CustomField>
    <fullName>testfieldformula__c</fullName>
    <formula>testfield4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testfieldformula</label>
    <type>Text</type>
</CustomField>