metadata/force-app/main/default/objects/TestObj__c/fields/testfieldgeolocation__c.field-meta.xml
<CustomField>
    <fullName>testfieldgeolocation__c</fullName>
    <label>testfieldgeolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>