metadata/force-app/main/default/objects/TestObj__c/fields/testsvl__c.field-meta.xml
<CustomField>
    <fullName>testsvl__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>TestObjs</relationshipLabel>
    <relationshipName>TestObjs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>